@@ -61,3 +61,7 @@ class DMY_HostedService : CIM_HostedService
 {
 };
 
+class DMY_ElementConformsToProfile : CIM_ElementConformsToProfile
+{
+};
+
