@@ -106,3 +106,9 @@
    type: instance association
    namespace: root/interop
 #
+[CIM_ElementConformsToProfile]
+   provider: ServerProvider
+   location: sfcInteropServerProvider
+   type: instance association
+   namespace: root/interop
+#
